fix double scroll by changing center overflow

--- a/product.css
+++ b/product.css
@@ -11,6 +11,8 @@
 
 body {
     margin: 0px;
+    /*LAD*/
+    background-color: rgb(251,251,251);
 }
 
 .main {
@@ -62,7 +64,8 @@ body {
     width: auto;
     right: 160px;
     left: 200px;
-    overflow-y: auto;
+    /*overflow-y: auto*/
+    overflow-y: visible;
     height: 100vh;
 }
 
